Revision history for {{$dist->name}}

{{$NEXT}}

0.018     2021-01-17 03:09:14+08:00 Asia/Kuala_Lumpur
    New features:

    - provide ->stderr to match ->stdin/->stdout

    Bugs fixed:

    Dependency updates:

    - latest Ryu (2.006) for some bugfixes and new features
    - Tickit::Async no longer listed in cpanfile

0.017     2020-06-29 11:18:48+08:00 Asia/Kuala_Lumpur
    No new features.

    Dependency updates:

    - latest Ryu (2.001) for some bugfixes and new features
    - Tickit::Async is now only marked as "suggested"

    Bugs fixed:

    - t/udp.t fails intermittently, since this part of the code is due for a rework
    the failing test has been marked TODO

0.016     2019-11-06 00:08:35+08:00 Asia/Kuala_Lumpur
    No new features.

    Dependency updates:

    - pulls in latest (1.008) version of Ryu for some bugfixes

0.015     2019-04-28 00:19:50+08:00 Asia/Kuala_Lumpur
    New features:

    - very minor change to truncation rules for automatic labelling on ->sink

    Dependency updates:

    - pulls in latest (1.003) version of Ryu

0.014     2019-01-02 00:27:05+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - pull in newer Ryu to ensure that sync/async bridge works as expected.

0.013     2018-12-15 20:54:20+08:00 Asia/Kuala_Lumpur
    New features:

    - support for the writeready events on IO::Async::Stream
    for Ryu sink flow control

    Bugs fixed:

    - the initial value in a ->from arrayref was not deferred,
    so it would be emitted before anything had a chance to attach
    a chained handler

0.012     2018-12-13 22:31:05+08:00 Asia/Kuala_Lumpur
    New features:

    - the ->to_stream and ->from_stream methods use flow
    control notifications from the source/sink to enable
    or disable read/write notifications appropriately:
    this allows chained actions on a source to push back
    on incoming data if it's not being processed quickly
    enough.

0.011     2018-12-02 14:22:37+08:00 Asia/Kuala_Lumpur