@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    No new features
+
+    Bugs fixed:
+
+    - Override Ryu::Source::FUTURE_FACTORY to create new futures from the loop
 
 0.018     2021-01-17 03:09:14+08:00 Asia/Kuala_Lumpur
     New features:
